[gd_scene load_steps=15 format=2]

[ext_resource path="res://Graphics/Enemies/SpriteSheet_ShrubMonster.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/HitBox.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enemies/Crawler.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemies/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/ParticleFX/DeathParticle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Shaders/FlashShader.tres" type="Material" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 3 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 9.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 8.0
height = 6.0

[node name="Crawler" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )
DeathParticle = ExtResource( 5 )
move_speed = 50.0

[node name="Stats" parent="." instance=ExtResource( 4 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 6 )
position = Vector2( 3, -16 )
frames = SubResource( 5 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -3 )
shape = SubResource( 6 )

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( -12, 0 )
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 13, -8 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( -12, 0 )
collision_layer = 128
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 14, -8 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 1, -18 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.075

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
